# BI-Copilot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: benchmark_queries.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
scripts/: run_benchmark.py  setup_bigquery.py
src/agents/: narrator.py  planner.py  sql_agent.py  viz_agent.py
src/api/: main.py  models.py  routes.py
src/core/: config.py  llm.py  logging.py  observability.py
src/eval/: judge.py
src/graph/: state.py  workflow.py
src/prompts/: narrator.py  planner.py  sql.py  viz.py
src/tools/: bigquery_tool.py  schema_inspector.py  sql_validator.py
tests/unit/: test_sql_agent.py  test_sql_validator.py  test_workflow.py
