[project]
name = "bi-copilot"
version = "0.1.0"
description = "Multi-agent conversational BI assistant over BigQuery (LangGraph + GPT-4o)"
authors = [{ name = "Achraf Jemali" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "agents", "langgraph", "bigquery", "text-to-sql", "bi", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── Agent orchestration ──
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # ── LLM provider ──
    "openai>=1.50.0",

    # ── Google Cloud / BigQuery ──
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-bigquery-storage>=2.27.0",
    "pandas-gbq>=0.26.1",          # required for stable load_table_from_dataframe in newer versions

    # ── SQL parsing & validation ──
    "sqlglot>=25.20.0",

    # ── Web layer ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # ── Data & schemas ──
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",

    # ── Resilience ──
    "tenacity>=9.0.0",

    # ── Observability ──
    "structlog>=24.4.0",
    "langfuse>=2.50.0",

    # ── Config ──
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
    "freezegun>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/JEMALIACHRAF/bi-copilot"
Repository = "https://github.com/JEMALIACHRAF/bi-copilot"
Issues = "https://github.com/JEMALIACHRAF/bi-copilot/issues"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]   # line length — we use 100 hard cap, not 79

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501", "N802"]
"scripts/**" = ["N803"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit external services (BigQuery, OpenAI)",
    "slow: tests that take more than 1s",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "scripts/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]